--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/index.html
@@ -1,27 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 		<title>Shopme Admin Control Panel</title>
 		<link th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
 	</head>
-	<body class="container-fluid">
-		<div>
-			<nav class="navbar navbar-expand bg-dark navbar-dark">
-				<a th:href="@{/}"><img th:src="@{/images/ShopmeAdminSmall.png}"></a>
-				<div class="collapse navbar-collapse">
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link" th:href="@{/users}">Users</a>
-						</li>
-					</ul>
-					
-				</div>
-			</nav>
-			<h1>Welcome to Shopme Admin Control Panel</h1>
+	<body >
+		<div class="container-fluid">
+			
 		</div>
-		
+		<main class="py-4">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="card">
+							<div class="card-body">
+								<div class="card-title">
+									<h4>User List</h4>
+								</div>
+								
+								<div class="card-content py-5">
+									<table class="table table-striped">
+									<thead>
+										<th>No</th><th>Email</th><th>Firstname</th><th>Lastname</th>
+									</thead>
+									<tbody>
+										<tr th:each="u,index : ${users}">
+											<th th:text="${index.count}"></th>
+											<th th:text="${u.email}"></th>
+											<th th:text="${u.firstName}"></th>
+											<th th:text="${u.lastName}"></th>
+										</tr>
+									</tbody>
+								</table>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>			
+			</div>
+		</main>		
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
 		<script type="text/javascript" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
 	</body>
