--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/create.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/create.html
@@ -14,34 +14,30 @@
 						<div class="card">
 							<div class="card-body">								
 								<form th:action="@{/users}" th:object="${user}" th:method="post">
-									<div th:if="${#fields.hasAnyErrors()}">
-									    <ul>
-									        <li th:each="err : ${#fields.allErrors()}" th:text="${err}" />
-									    </ul>
-									</div>
 									<div class="form-group">
 										<label for="firstName" class="label-control">Firstname</label>
 										<input class="form-control" th:field="*{firstName}" />
-										<span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstname}">firstname can not empty</span>
+										<span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}" class="text-danger">firstname can not empty</span>
 									</div>
 									<div class="form-group">
 										<label for="lastName" class="label-control">Lastname</label>
 										<input class="form-control" th:field="*{lastName}" />
-										<span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">lastname can not empty</span>
+										<span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" class="text-danger">lastname can not empty</span>
 									</div>
 									<div class="form-group">
 										<label for="email" class="label-control">Email</label>
 										<input class="form-control" th:field="*{email}" />
-										<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">email can not empty</span>
+										<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger">email can not empty</span>
 									</div>
 									<div class="form-group">
 										<label for="password" class="label-control">Password</label>
 										<input type="password" class="form-control" th:field="*{password}">
-										<span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
+										<span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger"></span>
 									</div>
 									<div class="form-group">
 										<label for="confirmPassword" class="label-control">Password Confirmation</label>
 										<input type="password" class="form-control" th:field="*{confirmPassword}" />
+										<span th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}" class="text-danger"></span>
 									</div>
 									<div class="form-group">
 										<button class="btn btn-primary">Save</button>
