--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -1,27 +1,25 @@
-<!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      th:replace="~{layouts/app :: main-fragment(  
+                                                ~{::title},
+                                                ~{:: #home-static-resources},
+                                                 ~{:: #home-script-resouce},
+                                                ~{:: #home-header},
+                                                ~{:: #home-nav},
+                                                ~{:: #home-main-content},  
+                                                ~{:: #home-footer}
+                                               )}"
+>
 	<head>
+		<meta charset="UTF-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 		<title>Shopme Admin Control Panel</title>
 		<link th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
+		<link th:href="@{/fontawesome/all.css}" rel="stylesheet" type="text/css" />
 	</head>
 	<body class="container-fluid">
-		<div>
-			<nav class="navbar navbar-expand bg-dark navbar-dark">
-				<a th:href="@{/}"><img th:src="@{/images/ShopmeAdminSmall.png}"></a>
-				<div class="collapse navbar-collapse">
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link" th:href="@{/users}">Users</a>
-						</li>
-					</ul>
-					
-				</div>
-			</nav>
-			<h1>Welcome to Shopme Admin Control Panel</h1>
-			<h3>We are going to use bootstrap as framework template</h3>
-		</div>
+		
+		<main id="home-main-content" class="py-4">Halaman Utama Home</main>
 		
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
 		<script type="text/javascript" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
