--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/edit.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/edit.html
@@ -12,7 +12,7 @@
 >
 <head>
 		
-		<title >Crete User</title>
+		<title >Edit User</title>
 
 	</head>
 	<body class="container-fluid">
@@ -22,7 +22,8 @@
 					<div class="col-lg-12">
 						<div class="card">
 							<div class="card-body">								
-								<form th:action="@{/users}" th:object="${user}" th:method="post">
+								<form th:action="@{/users/{id}(id=${user.id})}" th:object="${user}" th:method="patch">
+									
 									<div class="form-group">
 										<label for="firstName" class="label-control">Firstname</label>
 										<input class="form-control" th:field="*{firstName}" />
@@ -40,9 +41,9 @@
 									</div>
 									<div class="form-group">
 										<label for="roles" class="label-control">Role</label>
-										<select th:field="*{roles}" class="form-control">
+										<select th:field="*{roles}" class="form-control" >
 											<option value="">Please select role</option>
-											<option th:each="item : ${roles}" th:text="${item.displayName}" th:value="${item.id}"></option>
+											<option th:each="item : ${roles}" th:text="${item.displayName}" th:value="${item.id}" ></option>
 										</select>
 										<span th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}" class="text-danger">email can not empty</span>
 									</div>
@@ -56,8 +57,7 @@
 										<input type="password" class="form-control" th:field="*{confirmPassword}" />
 										<span th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}" class="text-danger"></span>
 									</div>
-									<div class="form-group py-4">
-										
+									<div class="form-group">
 										<button class="btn btn-primary">Save</button>
 									</div>
 								</form>
