--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/layouts/app.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/layouts/app.html
@@ -34,7 +34,8 @@
 		          </ul>
 		        </li>
 		        <li class="nav-item">
-		          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+		          <a class="nav-link " th:href="@{/logout}" aria-disabled="true" onclick="event.preventDefault();$('#logout').submit()">Logout</a>
+		          <form th:method="POST" th:action="@{/logout}" id="logout"></form>
 		        </li>
 		      </ul>
 		      <form class="d-flex" role="search">
