--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/create.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/create.html
@@ -57,7 +57,7 @@
 										<span th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}" class="text-danger"></span>
 									</div>
 									<div class="form-group py-4">
-										
+										<a class="btn btn-secondary" th:href="@{/users}">Cancel</a>
 										<button class="btn btn-primary">Save</button>
 									</div>
 								</form>
