--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/auths/reset_password.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/auths/reset_password.html
@@ -10,12 +10,16 @@
 
 <body>
 	<div class="container" id="login-main-content">
-		<form th:method="POST" th:action="@{/auth/reset_password}">
+		<div th:if="${success}" class="alert alert-success">
+			<p th:text="${success}"></p>
+		</div>
+		<form th:method="POST" th:action="@{/auth/reset_password}" th:object="${pr}">
 			
 			<!-- Email input -->
 			<div class="form-outline mb-4">
 				<label class="form-label" for="email">Email address</label>
-				<input type="email" id="email" class="form-control" name="email" />
+				<input type="email"  class="form-control" th:field="*{email}" />
+				<span  th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger">Error</span>
 			</div>
 
 			<!-- Submit button -->
