--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/index.html
@@ -31,7 +31,7 @@
 								<div class="card-content py-5">
 									<table class="table table-striped">
 									<thead>
-										<th>No</th><th>Email</th><th>Firstname</th><th>Lastname</th><th>Role</th><th>Action</th>
+										<th>No</th><th>Email</th><th>Firstname</th><th>Lastname</th><th>Role</th><th>Status</th><th>Action</th>
 									</thead>
 									<tbody>
 										<tr th:each="u,index : ${users}">
@@ -43,9 +43,12 @@
 												<th:block th:if="${not #lists.isEmpty(u.roles)}" th:text="${u.roles[0].displayName}"></th:block>	
 												<th:block th:if="${#lists.isEmpty(u.roles)}" >-</th:block>
 											</td>
+											<td th:class="${u.enabled ? 'bg-success' : 'bg-danger'} + ' text-white'">
+												<span th:text="${u.enabled ? 'Enable' : 'Disable'}" ></span>
+											</td>
 											<td>
 												<a th:href="@{users/{id}(id=${u.id})}" class="btn btn-warning btn-sm"><i class="fas fa-file-edit  fa-xs"></i></a>
-												<a th:href="@{users/{id}/show(id=${u.id})}" class="btn btn-warning btn-sm"><i class="fas fa-info  fa-xs"></i></a>
+												<a th:href="@{users/{id}/show(id=${u.id})}" class="btn btn-info btn-sm"><i class="fas fa-info  fa-xs"></i></a>
 												<a th:href="@{users/{id}(id=${u.id})}" class="btn btn-danger btn-sm btn-hapus" th:onclick="'event.preventDefault(); removeUser(this);'" th:data-id="${u.id}">
 												    <i class="fas fa-remove fa-xs"></i>
 												</a>
