--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/layouts/auth.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/layouts/auth.html
@@ -14,9 +14,31 @@
 </head>
 
 <body>
-	<div class="container" th:insert="${mainContent} ?: ~{}">
-		
-	</div>
-</body>
+	<nav class="navbar navbar-expand-md navbar-light bg-white shadow-sm">
+		<div class="container">
+			
 
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<!-- Left Side Of Navbar -->
+				<ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+					<li class="nav-item " sec:authorize="isAuthenticated()">
+						<a class="nav-link" th:href="@{/}"
+							style="color:orange;font-weight:bold;">Admin</a>
+					</li>
+					<li class="nav-item " sec:authorize="!isAuthenticated()">
+						<a class="nav-link" th:href="@{/login}"
+							style="color:orange;font-weight:bold;">Login</a>
+					</li>
+					<li class="nav-item " sec:authorize="!isAuthenticated()">
+						<a class="nav-link" th:href="@{/register}"
+							style="color:orange;font-weight:bold;">Register</a>
+					</li>
+				</ul>
+
+				
+			</div>
+		</div>
+	</nav>
+	<div class="container mt-4 py-4" th:insert="${mainContent} ?: ~{}"></div>
+</body>
 </html>
