--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/edit.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/edit.html
@@ -57,7 +57,8 @@
 										<input type="password" class="form-control" th:field="*{confirmPassword}" />
 										<span th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}" class="text-danger"></span>
 									</div>
-									<div class="form-group">
+									<div class="form-group py-4">
+										<a class="btn btn-secondary" th:href="@{/users}">Cancel</a>
 										<button class="btn btn-primary">Save</button>
 									</div>
 								</form>
