--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/layouts/app.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/layouts/app.html
@@ -37,9 +37,6 @@
 		        <li class="nav-item">
 		          <a class="nav-link active" aria-current="page" href="#" th:href="@{/}">Home</a>
 		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="#">Link</a>
-		        </li>
 		        <li class="nav-item dropdown">
 		          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 		            Users
@@ -48,6 +45,25 @@
 		            <li><a class="dropdown-item" href="#" th:href="@{/users}">List Users</a></li>
 		            <li><a class="dropdown-item" href="#" th:href="@{/users/create}">Create User</a></li>
 		          </ul>
+		        </li>
+		        <li class="nav-item dropdown">
+		          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+		            Brands
+		          </a>
+		          <ul class="dropdown-menu">
+		            <li><a class="dropdown-item" href="#" th:href="@{/brands}">List Brand</a></li>
+		            <li><a class="dropdown-item" href="#" th:href="@{/brands/create}">Create Brand</a></li>
+		          </ul>
+		        </li>
+		        <li>
+					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+		            Categories
+		          </a>
+		          <ul class="dropdown-menu">
+		            <li><a class="dropdown-item" href="#" th:href="@{/categories}">Categories List</a></li>
+		            <li><a class="dropdown-item" href="#" th:href="@{/categories/create}">Create Category</a></li>
+		          </ul>
+		          
 		        </li>
 		      </ul>
 		      
