--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/layouts/app.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/layouts/app.html
@@ -26,7 +26,7 @@
 		<th:block th:replace="${otherStaticResources} ?: ~{}"></th:block>
 </head>
 	<body>
-		<nav class="navbar navbar-expand-lg bg-body-tertiary">
+		<nav class="navbar navbar-expand-lg ">
 		  <div class="container-fluid">
 		    <a class="navbar-brand" th:href="@{/}">Navbar</a>
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -114,7 +114,7 @@
 	            <a class="nav-link profile-image" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
 	             	<img class="img-xs rounded-circle" th:src="@{'/images/avatars/thumbnails/'+${#authentication.principal.photo}}" alt="Profile image" loading="lazy"> 
 	            </a>
-	            <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
+	            <div class="dropdown-menu dropdown-menu-right text-center navbar-dropdown" aria-labelledby="UserDropdown">
 	              <div class="dropdown-header text-center">
 	                <img class="img-md rounded-circle" th:src="@{'/images/avatars/thumbnails/'+${#authentication.principal.photo}}" alt="Profile image" loading='lazy'>
 	              </div>
@@ -135,6 +135,15 @@
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 
 		<script type="text/javascript" th:src="@{/webjars/bootstrap/5.3.1/js/bootstrap.min.js}"></script>
+		<script>
+				$(document).ready(function(){
+					if($('.alert').length > 0){
+						setInterval(function(){
+							$('.alert').remove();
+						},5000)
+					}
+				})
+			</script>
 		<th:block th:replace="${otherScriptResources} ?: ~{}"></th:block>
 	</body>
 </html>
